update on district
