# swagger_output.json
@@ -46,224 +46,26 @@
     },
     "/admin": {
       "post": {
-        "tags": [
-          "Admin services"
-        ],
-        "description": "Endpoint allow to create admin user",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "create a new admin",
-            "required": true,
-            "type": "object",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "type": "string",
-                  "example": "admin@gmail.com"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "password_demo_123"
-                },
-                "firstName": {
-                  "type": "string",
-                  "example": "ade"
-                },
-                "lastName": {
-                  "type": "string",
-                  "example": "lastName"
-                },
-                "middleName": {
-                  "type": "string",
-                  "example": "ola"
-                }
-              },
-              "required": [
-                "password"
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "admin succesfully created",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message ": {
-                  "type": "string",
-                  "example": "admin succesfully created"
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "_id": {
-                      "type": "string",
-                      "example": "002whhe"
-                    },
-                    "firstName": {
-                      "type": "string",
-                      "example": "adem"
-                    },
-                    "lastName": {
-                      "type": "string",
-                      "example": "Oluyemi"
-                    },
-                    "email": {
-                      "type": "string",
-                      "example": "adin@gmail.com"
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "400": {
-            "description": "admin available",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error ": {
-                  "type": "string",
-                  "example": "admin already on system, can also signin"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "401": {
-            "description": "error in creating admin",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error ": {
-                  "type": "string",
-                  "example": "error in creating admin"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        }
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
       }
     },
     "/admin/district": {
-      "post": {
-        "tags": [
-          "Admin services"
-        ],
-        "description": "Endpoint to create a new district",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "create a new admin",
-            "required": true,
-            "type": "object",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "type": "string",
-                  "example": "admin@gmail.com"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "password"
-                },
-                "name": {
-                  "type": "string",
-                  "example": "ade"
-                },
-                "phone": {
-                  "type": "string",
-                  "example": "09045677"
-                }
-              },
-              "required": [
-                "password"
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "district succesfully created",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message ": {
-                  "type": "string",
-                  "example": "district succesfully created"
-                },
-                "data": {
-                  "type": "object",
-                  "properties": {
-                    "_id": {
-                      "type": "string",
-                      "example": "002whhe"
-                    },
-                    "firstName": {
-                      "type": "string",
-                      "example": "adem"
-                    },
-                    "lastName": {
-                      "type": "string",
-                      "example": "Oluyemi"
-                    },
-                    "email": {
-                      "type": "string",
-                      "example": "adin@gmail.com"
-                    }
-                  }
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "400": {
-            "description": "district already created",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error ": {
-                  "type": "string",
-                  "example": "District already created"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          },
-          "401": {
-            "description": "error in creating district",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "error ": {
-                  "type": "string",
-                  "example": "error in creating district"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
-          }
-        }
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/admin/district/{districtId}": {
+      "delete": {
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
       }
     },
     "/student/signin": {
